2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomMethod.cs,
	  MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs,
	  MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  fixed 'Bug 397930 - Navigation to generic method not working
	  correctly'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Found cleaner way for
	  method resolve result.

2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Dom/CompoundType.cs: Avoid adding duplicate
	  parts. Simplified the Update method. Properly set the base type of
	  the compound type.
	* MonoDevelop.Projects.Dom/DomAttribute.cs,
	  MonoDevelop.Projects.Dom/IAttribute.cs,
	  MonoDevelop.Projects.Dom/DomCecilAttribute.cs: Named and positional
	  arguments are now represented using CodeExpression objects.
	* MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs: Store and
	  read attribute parameters.
	* MonoDevelop.Projects.Dom.Serialization/ClassEntry.cs: Set the
	  HasBaseTypes flag if the class has a base type.
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Bump db version.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
	  Remove debug code.

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/DomType.cs: fixed unit test issues.

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: removed debug
	  message/fixed unit test little issue.

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Some changes
	  required for unit tests.

2008-09-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomMethod.cs,